# TerminalDX12

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md  STATUS.md  build-insiders.ps1  build.bat  build.ps1  codecov.yml  run_tests.bat  setup-windows.ps1  vcpkg.json
.claude/: settings.local.json
.claude/agents/: build-engineer.md  cli-developer.md  code-reviewer.md  cpp-pro.md  debugger.md  documentation-engineer.md  performance-engineer.md  powershell-7-expert.md  python-pro.md  refactoring-specialist.md  test-automator.md
.github/workflows/: tests.yml
.specify/memory/: constitution.md
.specify/scripts/powershell/: check-prerequisites.ps1  common.ps1
docs/: ADDING_VT_SEQUENCES.md  ARCHITECTURE.md  CONFIGURATION.md  documentation-review.md
docs/api/html/: _application_8cpp.html  _application_8cpp.js  _application_8cpp_source.html  _application_8h.html  _application_8h.js  _application_8h_source.html  _c_1_2_users_2maxla_2_terminal_d_x12_2include_2core_2_application_8h-example.html  _c_1_2_users_2maxla_2_terminal_d_x12_2include_2core_2_window_8h-example.html  _con_pty_session_8cpp.html  _con_pty_session_8cpp_source.html  _con_pty_session_8h.html  _con_pty_session_8h.js  _con_pty_session_8h_source.html  _config_8cpp.html  _config_8cpp.js  _config_8cpp_source.html  _config_8h.html  _config_8h.js  _config_8h_source.html  _d_x12_renderer_8cpp.html  _d_x12_renderer_8cpp_source.html  _d_x12_renderer_8h.html  _d_x12_renderer_8h.js  _d_x12_renderer_8h_source.html  _glyph_atlas_8cpp.html  _glyph_atlas_8cpp.js  _glyph_atlas_8cpp_source.html  _glyph_atlas_8h.html  _glyph_atlas_8h.js  _glyph_atlas_8h_source.html  _input_handler_8cpp.html  _input_handler_8cpp_source.html  _pane_8cpp.html  _pane_8cpp_source.html  _pane_8h.html  _pane_8h.js  _pane_8h_source.html  _screen_buffer_8cpp.html  _screen_buffer_8cpp_source.html  _screen_buffer_8h.html  (+244 more)
docs/api/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  (+67 more)
include/core/: Application.h  Config.h  LayoutCalculator.h  Profile.h  ResizeManager.h  Window.h
include/pty/: ConPtySession.h  IPtySession.h
include/rendering/: DX12Renderer.h  GlyphAtlas.h  IRenderer.h  RenderingPipeline.h  TextRenderer.h
include/terminal/: ColorPalette.h  ITerminalView.h  ScreenBuffer.h  VTStateMachine.h
include/ui/: FontEnumerator.h  InputHandler.h  MouseHandler.h  Pane.h  PaneManager.h  PaneSettingsDialog.h  ProfileManagerDialog.h  SearchEngine.h  SearchManager.h  SelectionManager.h  SettingsDialog.h  Tab.h  TabManager.h  TerminalSession.h  UrlHelper.h
shaders/: CMakeLists.txt  GlyphPixel.hlsl  GlyphVertex.hlsl
specs/001-fix-resize-row/: spec.md
specs/001-fix-resize-row/checklists/: requirements.md
specs/006-settings-dialog/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-settings-dialog/checklists/: requirements.md
specs/1-core-vt-compatibility/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-configuration/: spec.md
specs/3-mouse-enhancement/: spec.md
specs/4-advanced-features/: plan.md  spec.md  tasks.md
specs/5-polish/: plan.md  spec.md  tasks.md
src/: main.cpp
src/core/: Application.cpp  Config.cpp  LayoutCalculator.cpp  ResizeManager.cpp  Window.cpp
src/pty/: ConPtySession.cpp
src/rendering/: DX12Renderer.cpp  GlyphAtlas.cpp  RenderingPipeline.cpp  TextRenderer.cpp
src/terminal/: ColorPalette.cpp  ScreenBuffer.cpp  TerminalDispatcher.cpp  VTStateMachine.cpp  VTStateMachineCSI.cpp  VTStateMachineModes.cpp  VTStateMachineOSC.cpp  VTStateMachineSGR.cpp
src/ui/: FontEnumerator.cpp  InputHandler.cpp  MouseHandler.cpp  Pane.cpp  PaneManager.cpp  PaneSettingsDialog.cpp  ProfileManagerDialog.cpp  SearchEngine.cpp  SearchManager.cpp  SelectionManager.cpp  SettingsDialog.cpp  Tab.cpp  TabManager.cpp  TerminalSession.cpp  UrlHelper.cpp
tests/: CMakeLists.txt  README.md  config.py  conftest.py  helpers.py  manual_tests.md  pytest.ini  requirements.txt  run_tests.bat  test_attributes.py  test_basic.ps1  test_clipboard.py  test_colors.py  test_e2e.py  test_keyboard.py  test_mouse.py  test_phase5_features.py  test_resize.py  test_stress.py  test_terminal.py  test_unicode.py  test_visual_regression.py  test_vt_features.py  visual_regression.py
tests/baselines/: .gitkeep  metadata.json
tests/unit/: test_config.cpp  test_font_enumerator.cpp  test_performance.cpp  test_screen_buffer.cpp  test_search_engine.cpp  test_unicode.cpp  test_vt_parser.cpp
tests/unit/contract/: test_conpty_contract.cpp  test_tab.cpp  test_tab_manager.cpp  test_terminal_session.cpp
